add arrow image

--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -73,7 +73,9 @@
       <div class="col-4">
         <img [src]="response?.sprites?.front_default" class="img-responsive pokemon-image" alt="">
       </div>
-      <div class="col-4"></div>
+      <div class="col-4">
+        <img src="../../assets/green-arrow-png-16658.png" style="margin-top: 34px;" class="img-responsive pokemon-image" alt="">
+      </div>
       <div class="col-4">
         <img [src]="evolutionData.imageURL" class="img-responsive pokemon-image" alt="">
       </div>
