Apply all the suggested changes and apply all new requirements

--- a/src/app/shared/page-not-found/page-not-found.component.html
+++ b/src/app/shared/page-not-found/page-not-found.component.html
@@ -1,7 +1,7 @@
 <div class="wrap text-center my-3">
   <div class="logo">
-    <h4 class="mb-3">OOPS! - Could not Find it</h4>
-    <img src="http://p.w3layouts.com/demos/oops-404/web/images/404-1.png" />
+    <h4 class="mb-3">{{msg}}</h4>
+    <img src='{{imageURL}}' />
     <div class="sub">
       <p>
         <button type="button" class="btn btn-outline-secondary my-3" (click)="redirectBack()">
