--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,15 @@
 <app-header></app-header>
 <div class="app-contain">
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </div>
 <div class="parentDisable" [hidden]="!showLoaderImage">
-    <div class="overlay-box spinner-border" role="status">
-        <span class="sr-only">Loading...</span>
-    </div>
+  <div class="overlay-box spinner-border" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+</div>
+
+<div class="alert alert-dismissible fade show" (click)="notificationConfig.show=false"
+  [ngClass]="[true ? 'alert-' + notificationConfig.type : '', notificationConfig.show ? 'd-block' : 'd-none']">
+  <button type="button" class="close">&times;</button>
+  {{notificationConfig.text || ''}}!
 </div>
